k8s/base/crypto/lnd2/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lnd2
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    internal-whitelist.kutara.io/enabled: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  namespace: crypto
spec:
  ingressClassName: nginx
  rules:
  - host: lnd2.scr1.rabbito.tech
    http:
      paths:
      - backend:
          service:
            name: lnd2
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - lnd2.scr1.rabbito.tech
    secretName: lnd2-tls
